<resources>
    <string name="app_name">MyEmail</string>
    <!--Main Activity-->
    <string name="first_desc">• תאימות ניירת רכב(קשה + צהוב)</string>
    <string name="second_desc">• מערכות מקוריות של הרכב (4 מאותתים / מפשרי אדים / כיוון מראות / לחצני הגה / מזגן)</string>
    <string name="third_desc">• פלסטיקה וגומיות מעבר מותקנים כנדרש</string>
    <string name="fourth_desc">• אור פנים / חנייה / תא כפפות / קונסול תחתון / לוח שעונים / אור גבוה/נמוך / איתותים / מנורות אזהרה / תאורת גג</string>
    <string name="fifth_desc">• ניקיון ריפודים + תקרה</string>
    <string name="sixth_desc">• בדיקה סביב הרכב לפגיעות חיצוניות / נזקים - בדגש רב לפגושים ודלתות</string>
    <string name="seventh_desc">• תאורות חיצוניות</string>
    <string name="eighth_desc">• וודא ניקיון הרכב</string>
    <string name="agree">מסכים</string>

    <!--Send mail Activity-->
    <string name="hint_car_chassis">מספר שלדה</string>
    <string name="hint_car_number">מספר רישוי</string>
    <string name="btn_send_email">שלח</string>
    <string name="btn_shoot_picture">צלם</string>

    <!--Camera Test-->
    <string name="capture">Capture</string>
    <string name="camera_not_supported">Your Device doesn\'t Support Camera.</string>
    <string name="capture_image_failed">Failed to capture image.</string>
    <string name="permission_message">Both permissions are required. Please allow both permission to take picture.</string>
    <string name="cancel_message">Cancelled by user.</string>
    <string name="capture_deny_message">Capture image won\'t work without both permissions.</string>

    <!--E-mail details-->
<!--    <string name="admin_email">car.improvement.test@gmail.com</string>-->
<!--    <string name="admin_password">top777car</string>-->
<!--    <string name="recipient_email">car.improvement.test@gmail.com</string>  -->

    <string name="admin_email">car.improvement.test@gmail.com</string>
    <string name="admin_password">curnjrdqclkmjemb</string>
    <string name="recipient_email">car.improvement.test@gmail.com</string>
</resources>

